### 0.6.11

  *

### 0.6.9
  
  * adding "##" syntax for shorthand functions to execute in place

### 0.6.8
  
  * fixing space in arguments tokenizing error 
  * fixing shorthand methods at the end of hash declarations

### 0.6.6

  * adding compile to bin

### 0.6.5

  * fixed string buffer template problem

### 0.6.4

  * experimenting with "watch compiling" -- ms-compile <from dir> <to dir> <template file?>
  
### 0.6.3

  * patch compiler bug

### 0.6.2
  
  * compiler registration

```
$m.registerCompiler(require('express').compiler);
```

### 0.6.1

  * arbitrary code after the initial heredoc declaration (see tests/heredocs.ms "test4")
  
### 0.6.0
  
  * removed auto semicolon for heredoc

### 0.5.7

  * added middleware for express/connect

### 0.5.6

  * merged 0.5.4

### 0.5.5

  * compile support for connect

### 0.5.4

  * added haml filter support

### 0.5.3

  * fixed self problem in bootstrap

### 0.5.2

  * fixed #3

### 0.5.0

  * adding shortcut for returning "=> foo"
  * sinatra support
  * removing jsml

### 0.4.6.pre3

  * fixing #590

### 0.4.6.pre2

  * adding auto return to shortcut mappers


### 0.4.6.pre1

  * adding shortcut mappers

### 0.4.5

  * merged 0.4.4.pre1 changes

### 0.4.4 (yanked)

  * fixed gem package build error
  * fixed npm bin execute probelm
  * added ms-parse and ms-run in gem's bin dir
  * improved gem/npm publish command

### 0.4.4.pre1

  * added self to methods

### 0.4.3.pre4

  * fixing node bin files

### 0.4.3.pre

  * adding jsml support
  * dog-fooding
  * took out string interpolation for heredocs for now

### 0.4.0

  * adding experimental export and public classes for common.js

### 0.4.0.pre14

  * lookback error when no spacing

### 0.4.0.pre13

  * lookback off by 1
  * added pp for printing tree

### 0.4.0.pre12

  * regex bug
  * rails support

### 0.4.0.pre11

  * adding boot strap for web browsers

### 0.4.0.pre10

  * multi-line comment parsing fix

### 0.4.0.pre8
