@@ -1,3 +1,3 @@
 module Mochiscript
-  VERSION = "0.6.9"
+  VERSION = "0.6.11"
 end
