@@ -3,7 +3,7 @@
   "description": "Javascript Dessert",
   "keywords": [ "javascript", "language", "mochiscript", "compiler" ],
   "author": "Jeff Su",
-  "version": "0.6.9",
+  "version": "0.6.11",
   "licenses": [ { "type": "MIT" }],
   "engines": { "node": ">=0.4.0" },
   "directories": { "lib": "./lib/mochiscript" },
