@@ -460,6 +460,7 @@ class ShorthandFunctionParser extends RootParser {
     var exec    = nhashes == 2;
     
     tokens.consume(nhashes);
+
     var argsMatch = tokens.match(ARGS_REGEX);
     var args = null;
 
@@ -473,7 +474,7 @@ class ShorthandFunctionParser extends RootParser {
     var body = new $c.CurlyParser();
     body.parse(tokens);
     var semi = tokens.match(/^\s*[,;\)\}\]]/) ? '' : ';';
-    var out  = [ 'function', args, body ];
+    var out  = [ 'function', args, body, semi ];
 
     if (exec) {
       out.unshift('(');
