@@ -18,8 +18,23 @@ var test4 = <<END + " world";
   hello
 END
 
+var foo = {
+  test: #{ => $1 + " world" }
+};
+
+var test5 = foo.test(<<END);
+  hello
+END
+
+var test6 = [ 'hello' ].map(#{ => $1 + " " + <<END; })[0];
+  world
+END
+
 $m.test(#{
   $1.eq("hello\nworld", test1);
   $1.eq("hello\nworld", test2);
   $1.eq("hello world", test4);
+  $1.eq("hello world", test5);
+  $1.eq("hello world", test5);
+  $1.eq("hello world", test6);
 });
